fix: WEB-49 Fixed various table overflows in both desktop and mobile versions

--- a/src/assets/scss/_macro-profile.scss
+++ b/src/assets/scss/_macro-profile.scss
@@ -3,7 +3,7 @@
 div.vcard {
   padding-top: 5px;
   position: relative;
-  white-space: nowrap;
+  // white-space: nowrap;
   left: 0px;
   display: inline-block;
 }
@@ -32,4 +32,7 @@ img.logo {
 div.values {
   display: inline-block;
   vertical-align: middle;
+  a {
+    word-break: break-all;
+  }
 }
