--- a/src/assets/scss/_status.scss
+++ b/src/assets/scss/_status.scss
@@ -14,6 +14,7 @@
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  word-break: break-all;
 }
 
 .aui-lozenge-success {
